--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     body {
         margin: 0;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-image: url(/public/back.jpg  );
+        background-image: url(/back.jpg  );
         background-size: cover;
         display: flex;
         justify-content: center;
